# CellularAutomaton

./: .gitignore  README.md  run-cmake.bat  run-example.bat  set-env.bat  start-visual-studio.bat
CellularAutomaton/: CMakeLists.txt  CellularAutomaton.sln
CellularAutomaton/CellularAutomaton/: CMakeLists.txt  CellularAutomaton.vcxproj
CellularAutomaton/CellularAutomaton/src/: CMakeLists.txt  main.cpp
CellularAutomaton/CellularAutomaton/src/main/: CMakeLists.txt  main.cpp
CellularAutomaton/CellularAutomaton/src/models/: CMakeLists.txt  ConwayModel.cpp  ConwayModel.h  ModelInterface.cpp  ModelInterface.h
CellularAutomaton/CellularAutomaton/src/tests/: CMakeLists.txt  unit_tests.cpp
SfmlExample/: CellularAutomaton.sln
SfmlExample/SfmlExample/: SfmlExample.vcxproj
SfmlExample/SfmlExample/src/: main.cpp
